rework the main loop and handlers: - open() and close() the file in the main loop - pass the fd down into the handlers - use _rtld_error() in ELFNAME(ldd)

this fixes PR#40543 and also makes error messages look better.