usr.bin/ldd/ldd.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: ldd.h,v 1.1 2009/01/06 03:59:56 mrg Exp $	*/
+/*	$NetBSD: ldd.h,v 1.2 2009/02/03 03:01:02 mrg Exp $	*/
 
 /*
  * Copyright (c) 2008 Matthew R. Green
@@ -28,11 +28,11 @@
  * SUCH DAMAGE.
  */
 
-int aout_ldd(char *, char *, char *);
-int elf32_ldd(char *, char *, char *);
+int aout_ldd(int, char *, char *, char *);
+int elf32_ldd(int, char *, char *, char *);
 
 #ifdef _LP64
-int elf64_ldd(char *, char *, char *);
+int elf64_ldd(int, char *, char *, char *);
 #define elf_ldd elf64_ldd
 #else
 #define elf_ldd elf32_ldd
